Title page, added rc-glied section, fixed table

--- a/versuche/computerversuch/sections/schallgeschwindigkeit.tex
+++ b/versuche/computerversuch/sections/schallgeschwindigkeit.tex
@@ -6,6 +6,7 @@ Die Schallgeschwindigkeit $c$ kann mit
 \[c=\frac{s}{t}\]
 berechnet werden, wobei $s$ die Messstrecke ist und $t$ die Laufzeit.
 
+
 \subsection{Durchf\"{u}hrung}
 
 \subsubsection*{Versuchsanordnung}
@@ -14,6 +15,7 @@ Zur Bestimmung der Schallgeschwindigkeit wurde die Laufzeit eines Schallpulses \
 der L\"{a}nge $s = (2.561 \pm 0.003) m$ mehrfach gemessen (die gesch\"{a}tzte Unsicherheit der Strecke $\pm 3 mm$
 kommt daher, dass die genaue Lage der Mikrophon-Membran nicht festgestellt werden konnte). Die
 Temperatur im Experimentierraum betrug $\vartheta=23 \degree C$.
+
 
 \subsubsection*{Messergebnisse}
 
@@ -41,6 +43,7 @@ Temperatur im Experimentierraum betrug $\vartheta=23 \degree C$.
     \end{tablenotes}
 \end{threeparttable}
 
+
 \subsubsection*{Mittlere Laufzeit}
 
 Die mittlere Laufzeit wird berechnet mit
@@ -51,11 +54,15 @@ und der Fehler mit
 \[ s_{\bar{t}} = \frac{s_t}{\sqrt{20}} = 0.06 \]
 Somit ergibt sich die mittlere Laufzeit mit Unsicherheit als \underline{\underline{$t = (7.37 \pm 0.06)$ ms}}.
 
+
 \subsubsection*{Schallgeschwindigkeit}
 
-Die Schallgeschwindigkeit wird mit $c=\frac{s}{t}$ berechnet. Wir wissen dass $s=\bar{s}+s_{\bar{s}}=(2.561 \pm 0.003) \textrm{m} $ und $t=\bar{t}+s_{\bar{t}}=(7.37 \pm 0.06) \textrm{ms} $.
+Die Schallgeschwindigkeit wird mit $c=\frac{s}{t}$ berechnet. Wir wissen dass
+$s=\bar{s}+s_{\bar{s}}=(2.561\pm0.003) \textrm{m}$
+und
+$t=\bar{t}+s_{\bar{t}}=(7.37\pm0.06) \textrm{ms}$.
 
-Da die Schallgeschwindigkeit eine Funktion von mehreren Messgr\"{o}ssen ist, muss mit Hilfe der
+Da die Schallgeschwindigkeit eine Funktion von mehreren Messgr\"ossen ist, muss mit Hilfe der
 Gauss'schen Fehlerfortpflanzungsgesetzes der Fehler berechnet werden. Dazu wird die Formel $c=\frac{s}{t}$
 partitiell abgeleitet nach $s$ und $t$
 \[ \frac{\partial c}{\partial s} = \frac{1}{t} \textrm{\hspace{10mm} und \hspace{10mm}} \frac{\partial c}{\partial{t}} = \frac{-s}{t^2} \]
@@ -65,5 +72,10 @@ und in die Formel des Fehlerfortpflanzungsgesetzes eingesetzt
 Die mittlere Schallgeschwindigkeit berechnet sich mit
 \[ \bar{c}=\frac{\bar{s}}{\bar{t}} = 347.73 \frac{\textrm{m}}{\textrm{s}} \]
 
-Somit ergibt sich die Schallgeschwindigkeit \underline{\underline{$c=(347.7 \pm 2.9) \frac{\textrm{m}}{\textrm{s}}$}}
+Somit ergibt sich die Schallgeschwindigkeit
+\underline{\underline{$c=(347.7 \pm 2.9) \frac{\textrm{m}}{\textrm{s}}$}}
+
+
+\subsection{Resultate und Diskussion}
+
 
