--- a/versuche/computerversuch/computerversuch.tex
+++ b/versuche/computerversuch/computerversuch.tex
@@ -8,5 +8,7 @@
     \include{sections/schallgeschwindigkeit}
     \include{sections/eisengehalt}
     \include{sections/federkonstante}
+    \include{sections/pendel}
+    \include{sections/rc-glied}
 \end{document}
 
