--- a/versuche/computerversuch/preamble/title.tex
+++ b/versuche/computerversuch/preamble/title.tex
@@ -1,7 +1,6 @@
+\author{Alex Murray}
+
 \title{
-    \author{Alex Murray}
-    \vspace{25mm}
     \vspace{20mm}
-    \large{Computerversuch} \\
-    \date{\today}
+    \Huge{Computerversuch}
 }
