Adding plots for Aufgabe 1) and 2)

--- a/versuche/computerversuch/sections/schallgeschwindigkeit.tex
+++ b/versuche/computerversuch/sections/schallgeschwindigkeit.tex
@@ -76,6 +76,17 @@ Somit ergibt sich die Schallgeschwindigkeit
 \underline{\underline{$c=(347.7 \pm 2.9) \frac{\textrm{m}}{\textrm{s}}$}}
 
 
+\subsubsection*{QtiPlot}
+
+\begin{figure}[h!]
+    \caption{XY-Scatter der einzelnen Laufzeiten und Visualisierung der Standardabweichung und Fehler}
+    \includegraphics[width=\textwidth]{qtiplot/schallgeschwindigkeit}
+    \label{fig:schallgeschwindigkeit}
+\end{figure}
+
+
+
+
 \subsection{Resultate und Diskussion}
 
 
