--- a/versuche/computerversuch/sections/eisengehalt.tex
+++ b/versuche/computerversuch/sections/eisengehalt.tex
@@ -6,6 +6,7 @@
 
 \subsubsection*{Versuchsanordnung}
 
+
 \subsubsection*{Messergebnisse}
 
 \begin{threeparttable}
@@ -47,4 +48,13 @@ wobei $x_i$ der Eisengehalt in Prozent ist und $s_{\bar{x}}$ der \emph{einfache}
 
 Der gewichtete Fehler berechnet sich mit der Formel
 \[ s_{\bar{x}_{gewichtet}} = \frac{1}{ \sqrt{ \sum_{i=1}^{9} g_{\bar{x}_i} } } = \underline{\underline{0.4 \textrm{\%}}}  \]
+
+
+\subsubsection*{QtiPlot}
+
+\begin{figure}[h!]
+    \caption{XY-Scatter der gemessenen Eisengehalte mit Fehler}
+    \includegraphics[width=\textwidth]{qtiplot/eisengehalt}
+    \label{fig:eisengehalt}
+\end{figure}
 
