Solved all tasks and exported all required plots from qtiplot

--- a/laborjournal.tex
+++ b/laborjournal.tex
@@ -3,10 +3,11 @@
 \input{preamble/packages.tex}
 \input{preamble/title.tex}
 
-\ussepackage{pdfpages}
+\usepackage{pdfpages}
 
 \begin{document}
     \input{titlepage/titlepage.tex}
-    \includepdf[pages=-]{versuche/computer/computerversuch.pdf}
+    \includepdf[pages=-]{formelsammlung/formelsammlung.pdf}
+    \includepdf[pages=-]{versuche/computerversuch/computerversuch.pdf}
 \end{document}
 
