--- a/versuche/computerversuch/sections/eisengehalt.tex
+++ b/versuche/computerversuch/sections/eisengehalt.tex
@@ -9,28 +9,30 @@
 
 \subsubsection*{Messergebnisse}
 
-\begin{threeparttable}
-    \caption{Gemessene Gr\"ossen}
-    \begin{tabular}{ccc}
-        \toprule
-        Messung & Eisengehalt (\%) & Absoluter Fehler (\%) \\
-        \midrule
-        1   & 20.3  & 1.2 \\
-        2   & 21.9  & 1.3 \\
-        3   & 21.1  & 1.1 \\
-        4   & 19.6  & 0.8 \\
-        5   & 19.9  & 1.3 \\
-        6   & 18.0  & 1.3 \\
-        7   & 19.4  & 1.0 \\
-        8   & 22.2  & 2.0 \\
-        9   & 21.6  & 0.8 \\
-        \bottomrule
-    \end{tabular}
-    \begin{tablenotes}
-        \small
-        \item \textbf{Hinweis:} Daten wurde vom Auftragsdokument kopiert.
-    \end{tablenotes}
-\end{threeparttable}
+\begin{center}
+    \begin{threeparttable}
+        \caption{Gemessene Gr\"ossen}
+        \begin{tabular}{ccc}
+            \toprule
+            Messung & Eisengehalt (\%) & Absoluter Fehler (\%) \\
+            \midrule
+            1   & 20.3  & 1.2 \\
+            2   & 21.9  & 1.3 \\
+            3   & 21.1  & 1.1 \\
+            4   & 19.6  & 0.8 \\
+            5   & 19.9  & 1.3 \\
+            6   & 18.0  & 1.3 \\
+            7   & 19.4  & 1.0 \\
+            8   & 22.2  & 2.0 \\
+            9   & 21.6  & 0.8 \\
+            \bottomrule
+        \end{tabular}
+        \begin{tablenotes}
+            \small
+            \item \textbf{Hinweis:} Daten wurde vom Auftragsdokument kopiert.
+        \end{tablenotes}
+    \end{threeparttable}
+\end{center}
 
 Der einfache Mittelwert berechnet sich mit der Formel
 \[ \bar{x}_{einfach} = \frac{1}{9} \sum_{i=1}^{9} x_i = \underline{\underline{20.4 \textrm{\%}}} \]
@@ -53,8 +55,9 @@ Der gewichtete Fehler berechnet sich mit der Formel
 \subsubsection*{QtiPlot}
 
 \begin{figure}[h!]
+    \center
     \caption{XY-Scatter der gemessenen Eisengehalte mit Fehler}
-    \includegraphics[width=\textwidth]{qtiplot/eisengehalt}
+    \includegraphics[width=.85\textwidth]{qtiplot/eisengehalt}
     \label{fig:eisengehalt}
 \end{figure}
 
