--- a/versuche/computerversuch/sections/rc-glied.tex
+++ b/versuche/computerversuch/sections/rc-glied.tex
@@ -35,3 +35,21 @@
         \end{tablenotes}
     \end{threeparttable}
 \egroup
+
+
+\subsubsection*{QtiPlot}
+
+\begin{figure}[h!]
+    \center
+    \caption{Nicht-lineare Regression zur Bestimmung von $C$ anhand der Ausgangsspannung}
+    \includegraphics[width=.85\textwidth]{qtiplot/rc-ua}
+    \label{fig:rc-ua}
+\end{figure}
+
+\begin{figure}[h!]
+    \center
+    \caption{Nicht-lineare Regression zur Bestimmung von $C$ anhand der Phase}
+    \includegraphics[width=.85\textwidth]{qtiplot/rc-phase}
+    \label{fig:rc-phase}
+\end{figure}
+
