--- a/versuche/computerversuch/sections/schallgeschwindigkeit.tex
+++ b/versuche/computerversuch/sections/schallgeschwindigkeit.tex
@@ -18,30 +18,31 @@ Temperatur im Experimentierraum betrug $\vartheta=23 \degree C$.
 
 
 \subsubsection*{Messergebnisse}
-
-\begin{threeparttable}
-    \caption{Gemessene Gr\"{o}ssen}
-    \begin{tabular}{cccc}
-        \toprule
-        Messung & Laufzeit $t_i$ & Messung & Laufzeit $t_i$ \\
-        \midrule
-        1  & 6.83 & 11 & 7.36 \\
-        2  & 7.41 & 12 & 7.31 \\
-        3  & 7.32 & 13 & 7.56 \\
-        4  & 7.31 & 14 & 7.14 \\
-        5  & 7.23 & 15 & 6.94 \\
-        6  & 7.68 & 16 & 7.32 \\
-        7  & 7.33 & 17 & 7.34 \\
-        8  & 7.7  & 18 & 7.28 \\
-        9  & 7.93 & 19 & 7.01 \\
-        10 & 7.54 & 20 & 7.76 \\
-       \bottomrule
-    \end{tabular}
-    \begin{tablenotes}
-        \small
-        \item \textbf{Hinweis:} Daten wurden vom Auftragsdokument kopiert.
-    \end{tablenotes}
-\end{threeparttable}
+\begin{center}
+    \begin{threeparttable}
+        \caption{Gemessene Gr\"{o}ssen}
+        \begin{tabular}{cccc}
+            \toprule
+            Messung & Laufzeit $t_i$ & Messung & Laufzeit $t_i$ \\
+            \midrule
+            1  & 6.83 & 11 & 7.36 \\
+            2  & 7.41 & 12 & 7.31 \\
+            3  & 7.32 & 13 & 7.56 \\
+            4  & 7.31 & 14 & 7.14 \\
+            5  & 7.23 & 15 & 6.94 \\
+            6  & 7.68 & 16 & 7.32 \\
+            7  & 7.33 & 17 & 7.34 \\
+            8  & 7.7  & 18 & 7.28 \\
+            9  & 7.93 & 19 & 7.01 \\
+            10 & 7.54 & 20 & 7.76 \\
+           \bottomrule
+        \end{tabular}
+        \begin{tablenotes}
+            \small
+            \item \textbf{Hinweis:} Daten wurden vom Auftragsdokument kopiert.
+        \end{tablenotes}
+    \end{threeparttable}
+\end{center}
 
 
 \subsubsection*{Mittlere Laufzeit}
@@ -79,8 +80,9 @@ Somit ergibt sich die Schallgeschwindigkeit
 \subsubsection*{QtiPlot}
 
 \begin{figure}[h!]
+    \center
     \caption{XY-Scatter der einzelnen Laufzeiten und Visualisierung der Standardabweichung und Fehler}
-    \includegraphics[width=\textwidth]{qtiplot/schallgeschwindigkeit}
+    \includegraphics[width=.85\textwidth]{qtiplot/schallgeschwindigkeit}
     \label{fig:schallgeschwindigkeit}
 \end{figure}
 
