Wrote resultate and diskussion section in schallgeschwindigkeit

--- a/versuche/computerversuch/sections/eisengehalt.tex
+++ b/versuche/computerversuch/sections/eisengehalt.tex
@@ -54,7 +54,7 @@ Der gewichtete Fehler berechnet sich mit der Formel
 
 \subsubsection*{QtiPlot}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \center
     \caption{XY-Scatter der gemessenen Eisengehalte mit Fehler}
     \includegraphics[width=.85\textwidth]{qtiplot/eisengehalt}
