--- a/versuche/computerversuch/sections/federkonstante.tex
+++ b/versuche/computerversuch/sections/federkonstante.tex
@@ -16,14 +16,14 @@
             $F (N)$ & \hspace{12mm} & $z (m)$ \\
             \midrule
             3.83  & & 0.20 \\
-            7.79  & & 0.35 \\
+            7.89  & & 0.35 \\
             8.08  & & 0.42 \\
-            9.70  & & 0.46 \\
+            9.80  & & 0.46 \\
             10.58 & & 0.51 \\
             12.33 & & 0.54 \\
             12.23 & & 0.59 \\
             14.43 & & 0.67 \\
-            15.51 & & 0.71 \\
+            15.51 & & 0.81 \\
             17.09 & & 0.80 \\
             \bottomrule
         \end{tabular}
@@ -39,24 +39,24 @@
 
 \subsubsection*{QtiPlot}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \center
     \caption{Lineare Regression zur Bestimmung von $k$ und $F_0$}
-    \includegraphics[width=.7\textwidth]{qtiplot/feder-linear}
+    \includegraphics[width=.8\textwidth]{qtiplot/feder-linear}
     \label{fig:feder-linear}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \center
     \caption{95\% Confidence- und Prediction-bands sowie Residuals}
-    \includegraphics[width=.7\textwidth]{qtiplot/feder-95-bands}
+    \includegraphics[width=.8\textwidth]{qtiplot/feder-95-bands}
     \label{fig:feder-95-bands}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \center
     \caption{66\% Confidence- und Prediction-bands sowie Residuals}
-    \includegraphics[width=.7\textwidth]{qtiplot/feder-66-bands}
+    \includegraphics[width=.8\textwidth]{qtiplot/feder-66-bands}
     \label{fig:feder-66-bands}
 \end{figure}
 
