--- a/versuche/computerversuch/sections/pendel.tex
+++ b/versuche/computerversuch/sections/pendel.tex
@@ -42,7 +42,7 @@
 
 \subsubsection*{QtiPlot}
 
-\begin{figure}[h!]
+\begin{figure}[H]
     \center
     \caption{Nicht-lineare Regression zur Bestimmung von $A$, $\Gamma$, $f$, $\delta$ und $y0$}
     \includegraphics[width=.85\textwidth]{qtiplot/pendel}
