--- a/formelsammlung/formelsammlung.tex
+++ b/formelsammlung/formelsammlung.tex
@@ -7,6 +7,7 @@
     \input{titlepage/titlepage.tex}
     \input{sections/fehler-definition}
     \input{sections/fehler-rechnung}
+    \input{sections/fehler-fortpflanzung}
     \input{sections/histogramm}
     \input{sections/regression}
 \end{document}
