--- a/formelsammlung/sections/histogramm.tex
+++ b/formelsammlung/sections/histogramm.tex
@@ -3,7 +3,12 @@
 Ein Histogramm verleiht einen \"Uberblick \"uber die Streuung der $N$ Messwerte $x_i$ um den
 arithmetischen Mittelwert.
 
-\begin{tabular}{ll}
-    \multirow{2}{*}{ $h(x) = \frac{1}{\sqrt{ 2\pi\sigma^2 }} \cdot e^{-\frac{ (x-x_0)^2 }{ 2\sigma^2 }}$ } & $x_0$: Erwartungswert \\
-    & $\sigma$: Standardabweichung f\"ur $N \to \infty$ \\
-\end{tabular}
+\begin{equation}
+    h(x) = \frac{1}{\sqrt{ 2\pi\sigma^2 }} \cdot e^{-\frac{ (x-x_0)^2 }{ 2\sigma^2 }}
+    \hspace{5mm} \textrm{wobei} \hspace{5mm}
+    \begin{tabular}{ll}
+        $x_0$: & Erwartungswert \\
+        $\sigma$: & Standardabweichung f\"ur $N \to \infty$ \\
+    \end{tabular}
+\end{equation}
+
