Added bibliography, finished eisengehalt

--- a/versuche/computerversuch/preamble/packages.tex
+++ b/versuche/computerversuch/preamble/packages.tex
@@ -5,4 +5,6 @@
 \usepackage[flushleft]{threeparttable}
 \usepackage{float}
 \usepackage{amsmath}
-
+\usepackage[style=mla,backend=bibtex]{biblatex}
+\usepackage{siunitx}
+\sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
