--- a/versuche/computerversuch/computerversuch.tex
+++ b/versuche/computerversuch/computerversuch.tex
@@ -3,6 +3,8 @@
 \input{preamble/packages}
 \input{preamble/title}
 
+\addbibresource{bibliography/bibliography.bib}
+
 \begin{document}
     \input{titlepage/titlepage}
     \include{sections/schallgeschwindigkeit}
@@ -10,5 +12,7 @@
     \include{sections/federkonstante}
     \include{sections/pendel}
     \include{sections/rc-glied}
+
+%    \printbibliography
 \end{document}
 
