--- a/versuche/computerversuch/sections/schallgeschwindigkeit.tex
+++ b/versuche/computerversuch/sections/schallgeschwindigkeit.tex
@@ -3,7 +3,10 @@
 \subsection{Arbeitsgrundlagen}
 
 Die Schallgeschwindigkeit $c$ kann mit
-\[c=\frac{s}{t}\]
+\begin{equation}
+    c=\frac{s}{t}
+    \label{eq:schallgeschwindigkeit}
+\end{equation}
 berechnet werden, wobei $s$ die Messstrecke ist und $t$ die Laufzeit.
 
 
@@ -54,11 +57,20 @@ Es soll die mitlere Laufzeit $\bar{t}$ sowie die Schallgeschwindigkeit $c$ (mits
 \subsubsection*{Mittlere Laufzeit}
 
 Die mittlere Laufzeit wird berechnet mit
-\[ \bar{t} = \frac{1}{20} \sum_{i=1}^{20} t_i = \frac{7.36+7.31+7.56+7.14+6.94+\ldots}{20} = 7.37 \textrm{ms} \]
+\begin{equation}
+    \bar{t} = \frac{1}{20} \sum_{i=1}^{20} t_i = \frac{7.36+7.31+7.56+7.14+6.94+\ldots}{20} = 7.37 \textrm{ms}
+\end{equation}
+
 Die Standardabweichung wird berechnet mit
-\[ s_t = \sqrt{ \frac{ \sum_{i=1}^{20} (t_i - \bar{t})^2 }{20-1} } = 0.28\]
+\begin{equation}
+    s_t = \sqrt{ \frac{ \sum_{i=1}^{20} (t_i - \bar{t})^2 }{20-1} } = 0.28
+\end{equation}
+
 und der Fehler mit
-\[ s_{\bar{t}} = \frac{s_t}{\sqrt{20}} = 0.06 \]
+\begin{equation}
+    s_{\bar{t}} = \frac{s_t}{\sqrt{20}} = 0.06
+\end{equation}
+
 Somit ergibt sich die mittlere Laufzeit mit Unsicherheit als \underline{\underline{$t = (7.37 \pm 0.06)$ ms}}.
 
 
@@ -72,12 +84,19 @@ $t=\bar{t}+s_{\bar{t}}=(7.37\pm0.06) \textrm{ms}$.
 Da die Schallgeschwindigkeit eine Funktion von mehreren Messgr\"ossen ist, muss mit Hilfe der
 Gauss'schen Fehlerfortpflanzungsgesetzes der Fehler berechnet werden. Dazu wird die Formel $c=\frac{s}{t}$
 partitiell abgeleitet nach $s$ und $t$
-\[ \frac{\partial c}{\partial s} = \frac{1}{t} \textrm{\hspace{10mm} und \hspace{10mm}} \frac{\partial c}{\partial{t}} = \frac{-s}{t^2} \]
+\begin{equation}
+	\frac{\partial c}{\partial s} = \frac{1}{t} \textrm{\hspace{10mm} und \hspace{10mm}} \frac{\partial c}{\partial{t}} = \frac{-s}{t^2}
+\end{equation}
 und in die Formel des Fehlerfortpflanzungsgesetzes eingesetzt
-\[ s_{\bar{c}} = \sqrt{(\frac{1}{t} \cdot s_{\bar{s}})^2 + (\frac{-s}{t^2} \cdot s_{\bar{t}})^2} = 2.86 \frac{\textrm{m}}{\textrm{s}} \]
+
+\begin{equation}
+	s_{\bar{c}} = \sqrt{(\frac{1}{t} \cdot s_{\bar{s}})^2 + (\frac{-s}{t^2} \cdot s_{\bar{t}})^2} = 2.86 \frac{\textrm{m}}{\textrm{s}}
+\end{equation}
 
 Die mittlere Schallgeschwindigkeit berechnet sich mit
-\[ \bar{c}=\frac{\bar{s}}{\bar{t}} = 347.73 \frac{\textrm{m}}{\textrm{s}} \]
+\begin{equation}
+	\bar{c}=\frac{\bar{s}}{\bar{t}} = 347.73 \frac{\textrm{m}}{\textrm{s}}
+\end{equation}
 
 Somit ergibt sich die Schallgeschwindigkeit
 \underline{\underline{$c=(347.7 \pm 2.9) \frac{\textrm{m}}{\textrm{s}}$}}
@@ -95,13 +114,14 @@ Somit ergibt sich die Schallgeschwindigkeit
 \subsection{Resultate und Diskussion}
 
 Das Endresultat von $(347.7\pm2.9)\frac{\textrm{m}}{\textrm{s}}$ ist ein wenig h\"oher als der
-Literaturwert von $340.29 \frac{\textrm{m}}{\textrm{s}}$. Warscheinlich liegt diese Abweichung
-daran, dass der Literaturwert bei $\vartheta=20\degree C$ auf Meeresh\"ohe gemessen wurde
-anstatt bei $\vartheta=23\degree C$ (und h\"ochstwarscheinlich auch auf einer anderen H\"ohe). Die
-Schallgeschwindigkeit nimmt ab be h\"oherem Druck und tieferer Temperatur ab.
+Literaturwert\footcite{ref:schallgeschwindigkeit} von $344 \frac{\textrm{m}}{\textrm{s}}$.
+Warscheinlich liegt diese Abweichung daran, dass der Literaturwert bei $\vartheta=20\degree C$
+auf Meeresh\"ohe gemessen wurde anstatt bei $\vartheta=23\degree C$ (und h\"ochstwarscheinlich
+auch auf einer anderen H\"ohe). Die Schallgeschwindigkeit nimmt ab be h\"oherem Druck und tieferer
+Temperatur ab.
 
 In der Figur \ref{fig:schallgeschwindigkeit} sind die Einzelnen messwerte in einer XY-Scatter-Plot
 dargestellt. Die Standardabweichung (Violett) sollte die Stelle markieren, wo statistisch 67\%
 aller Messwerte fallen werden. Wenn man nachz\"ahlt, wie viele Punkte innerhalb und ausserhalb des
-Bandes liegen -- 13 innerhalb und 8 ausserhalb -- so kommt man grob auf $\frac{8}{13}=\simeq67\textrm{\%}$.
+Bandes liegen -- 13 innerhalb und 8 ausserhalb -- so kommt man grob auf $\frac{8}{13}\simeq67\textrm{\%}$.
 
