--- a/titlepage/titlepage.tex
+++ b/titlepage/titlepage.tex
@@ -17,9 +17,9 @@
         \hline
         07.10.2015 & C -- Auswertung mit Computer & 14.10.2015 & \\
         [10mm]
-        21.10.2015 & E11 -- Skineffekt            & 04.11.2015 & \\
+        21.10.2015 & O2 -- Lichtgeschwindigkeit   & 04.11.2015 & \\
         [10mm]
-        18.11.2015 & M6 -- ???                    & 09.12.2015 & \\
+        18.11.2015 & W8 -- ???                    & 09.12.2015 & \\
 
     \end{tabular}
     \end{center}
