--- a/versuche/computerversuch/computerversuch.tex
+++ b/versuche/computerversuch/computerversuch.tex
@@ -13,6 +13,8 @@
     \include{sections/pendel}
     \include{sections/rc-glied}
 
+    \include{sections/appendix}
+
 %    \printbibliography
 \end{document}
 
