--- a/versuche/computerversuch/preamble/packages.tex
+++ b/versuche/computerversuch/preamble/packages.tex
@@ -6,5 +6,7 @@
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage[style=mla,backend=bibtex]{biblatex}
+\usepackage[toc,page]{appendix}
 \usepackage{siunitx}
+\usepackage{pdfpages}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
