--- a/versuche/computerversuch/sections/pendel.tex
+++ b/versuche/computerversuch/sections/pendel.tex
@@ -82,10 +82,13 @@ der Formel m\"ussen vor dem Fitten gute Startwerte von Hand eingestellt werden. 
 \subsection{Resultate und Diskussion}
 
 Von der Figur \ref{fig:pendel} k\"onnen die gesuchten Parameter abgelesen werden. Diese sind:
-\begin{tabular}{ll}
-    $A$:        &  \SI{1.29 \pm 0.04}{m}    \\
-    $\Gamma$:   &  $(51.7 \pm 2.2) e-3$ \\
-    $\delta$:   &  $(503  \pm 23) e-3$  \\
-    $f$:        &  $(55.3 \pm 0.3) e-3$ \\
-    $y_0$:      &  $(41.4 \pm 7.4) e-3$ \\
-\end{tabular}
+\begin{center}
+    \begin{tabular}{ll}
+        Amplitude $A$:              &  $(1.29 \pm 0.04)$         \\
+        Abklingkonstante $\Gamma$:  &  $(51.7 \pm 2.2)\num{e-3}$ \\
+        Phase $\delta$:             &  $(503  \pm 23) \num{e-3}$ \\
+        Frequenz $f$:               &  $(55.3 \pm 0.3)\num{e-3}$ \\
+        Offset $y_0$:               &  $(41.4 \pm 7.4)\num{e-3}$ \\
+    \end{tabular}
+\end{center}
+
