--- a/versuche/lichtgeschwindigkeit/lichtgeschwindigkeit.tex
+++ b/versuche/lichtgeschwindigkeit/lichtgeschwindigkeit.tex
@@ -7,7 +7,8 @@
 
 \begin{document}
     \input{titlepage/titlepage}
-
+    \input{sections/arbeitsgrundlagen}
+    \input{sections/auswertung.tex}
 %    \printbibliography
 \end{document}
 
