Wrote Grundlagen, added lots of images and drawings and things

--- a/versuche/lichtgeschwindigkeit/lichtgeschwindigkeit.tex
+++ b/versuche/lichtgeschwindigkeit/lichtgeschwindigkeit.tex
@@ -7,8 +7,11 @@
 
 \begin{document}
     \input{titlepage/titlepage}
-    \input{sections/arbeitsgrundlagen}
-    \input{sections/auswertung.tex}
+    \include{sections/arbeitsgrundlagen}
+    \include{sections/durchfuehrung}
+    \include{sections/auswertung}
+    \include{sections/fehlerrechnung}
+    \include{sections/diskussion}
 %    \printbibliography
 \end{document}
 
