--- a/versuche/lichtgeschwindigkeit/preamble/packages.tex
+++ b/versuche/lichtgeschwindigkeit/preamble/packages.tex
@@ -5,8 +5,9 @@
 \usepackage[flushleft]{threeparttable}
 \usepackage{float}
 \usepackage{amsmath}
-\usepackage[style=mla,backend=bibtex]{biblatex}
+\usepackage[backend=bibtex,citestyle=verbose-ibid,bibstyle=numeric,sorting=nyt]{biblatex}
 \usepackage[toc,page]{appendix}
 \usepackage{siunitx}
+\usepackage{subcaption}
 \usepackage{pdfpages}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
