--- a/versuche/lichtgeschwindigkeit/sections/auswertung.tex
+++ b/versuche/lichtgeschwindigkeit/sections/auswertung.tex
@@ -1,8 +1,10 @@
 \section{Auswertung}
 
-\begin{center}
-    \begin{threeparttable}
-        \caption{Distanzmessungen bei Inkrementieren der Drehfrequenz}
+\begin{table}[H]
+    \caption{Distanzmessungen bei Inkrementieren der Drehfrequenz}
+    \begin{subtable}{.5\linewidth}
+        \centering
+        \caption{Messung von Alex Murray}
         \begin{tabular}{cc}
             \toprule
             Drehfrequenz ($Hz$) & Distanz ($\mu m$) \\
@@ -20,12 +22,10 @@
             1498 & -839 \\
             \bottomrule
         \end{tabular}
-    \end{threeparttable}
-\end{center}
-
-\begin{center}
-    \begin{threeparttable}
-        \caption{Distanzmessungen bei Dekrementieren der Drehfrequenz}
+    \end{subtable}
+    \begin{subtable}{.5\linewidth}
+        \centering
+        \caption{Messung von Yohannes Measho}
         \begin{tabular}{cc}
             \toprule
             Drehfrequenz ($Hz$) & Distanz ($\mu m$) \\
@@ -43,52 +43,52 @@
             502  & 851 \\
             \bottomrule
         \end{tabular}
-    \end{threeparttable}
-\end{center}
+    \end{subtable}
+\end{table}
 
-\begin{center}
-    \begin{threeparttable}
+\begin{table}[H]
+    \caption{}
+    \begin{subtable}{.5\linewidth}
+        \centering
         \caption{Messung von Alex Murray}
-        \begin{tabular}{cc}
+        \begin{tabular}{ccc}
             \toprule
-            $x (mm)$ & $z (mm)$ \\
+            $x (mm)$ & \hspace{5mm} & $z (mm)$ \\
             \midrule
-            10.042 & 12.5 \\
-            8.031  & 13.0 \\
-            6.049  & 13.5 \\
-            4.049  & 14.0 \\
-            1.990  & 14.5 \\
-            -0.019 & 15.0 \\
-            -1.988 & 15.5 \\
-            -3.955 & 16.0 \\
-            -5.954 & 16.5 \\
-            -7.973 & 16.5 \\
-            -9.952 & 17.5 \\
+            10.042 && 12.5 \\
+            8.031  && 13.0 \\
+            6.049  && 13.5 \\
+            4.049  && 14.0 \\
+            1.990  && 14.5 \\
+            -0.019 && 15.0 \\
+            -1.988 && 15.5 \\
+            -3.955 && 16.0 \\
+            -5.954 && 16.5 \\
+            -7.973 && 16.5 \\
+            -9.952 && 17.5 \\
             \bottomrule
         \end{tabular}
-    \end{threeparttable}
-\end{center}
-
-\begin{center}
-    \begin{threeparttable}
+    \end{subtable}%
+    \begin{subtable}{.5\linewidth}
+        \centering
         \caption{Messung von Yohannes Measho}
-        \begin{tabular}{cc}
+        \begin{tabular}{ccc}
             \toprule
-            $x (mm)$ & $z (mm)$ \\
+            $x (mm)$ & \hspace{5mm} & $z (mm)$ \\
             \midrule
-            10.047 & 12.5 \\
-            8.020  & 13.0 \\
-            5.980  & 13.5 \\
-            3.990  & 14.0 \\
-            1.926  & 14.5 \\
-            -0.053 & 15.0 \\
-            -2.048 & 15.5 \\
-            -4.030 & 16.0 \\
-            -6.039 & 16.5 \\
-            -7.997 & 17.0 \\
-            -9.987 & 17.5 \\
+            10.047 && 12.5 \\
+            8.020  && 13.0 \\
+            5.980  && 13.5 \\
+            3.990  && 14.0 \\
+            1.926  && 14.5 \\
+            -0.053 && 15.0 \\
+            -2.048 && 15.5 \\
+            -4.030 && 16.0 \\
+            -6.039 && 16.5 \\
+            -7.997 && 17.0 \\
+            -9.987 && 17.5 \\
            \bottomrule
         \end{tabular}
-    \end{threeparttable}
-\end{center}
+    \end{subtable}
+\end{table}
 
